plang/testing/logs/false-incorrect/100/program100.p.p
n (koY (l (jGXr (zgY6s (A) OZP9) (Fxo0m) (xpWjJ)) (DpGds) (czHAO (fX) ywiK (dyKQ (E4Hqo))) (fEph8 (U1lE) QMVXR (Z) (ryG))) iB (ufk7 C)) (P) (X).


v2EL g (IlA) (pzhX PP (ZV)) Uq.
e2zX :- ((hjs XIU)).


tT a R.

e q.
dSoX (eZ5 QvSs eE) :- pVQs (XP6En) Y (TEx) YoE.

q6gE o :- s (dQo (gjoM QbH (fBM) (Anq) (OrBhJ)) VFlL z) js6Ib (wM9D (IzRDk) IUM (N23F) RXTZ) DHp6P, (s r w s1); i EgHU; kDJ dx; oV onoWY (T) D4fSR, ws (e (XNvV)) (TH) g, (eVP5); bR (NhTs) sgkW (up); dv3Z, (mE1i KE); iPTf0 I; r (EQ) (d1U6q W4DQz (A) wL3), k1nl (ZQb51) (UqIGP) ZB (C9); (wG yB5X (LG) Mpfd (qPd r9); hy0Og; bq41 D8mt8).

w2P KyCDM :- (o6Fm j42a, clTeO HR9k0 FWO0, (i (L6wp) (kgyB auA (wHq) (hf)) lg (U); uYMQj QC91v (HFTq))); (((is DoNXT (i8gp (AR) dgq5O o1a)), (r))).
l8 (Z) BPp25 SLIK :- (ec2 (kAPgw) E6; (d (CV) (vvjA q7 (I) (AQW2) Vy) XUL, up6Ev); qr1gc (g) (JIE)).


f6DLg (hx2t DWV) (Rb) :- (sO (GZF4X)).

wpef3 :- i, (h1eX0).


lT8LA k.
yH7V9 (xF w Y2r5H bKjr p).

pr (Ki0).

? ((mWmu7; nM P (NYV) kiYk, p4 aRl5; s (hLCB k5wI ir (Z) H) (zcNn M1pOF PwDW HoDmQ); kHZkh TF)).